# neuralnet

./: CMakeLists.txt
macros/: CMakeLists.txt  add_sources.cmake  source_dirs.cmake
programs/: CMakeLists.txt
programs/neuralnet/: CMakeLists.txt
programs/neuralnet/private/: CMakeLists.txt  main.cpp
programs/neuralnet/public/: CMakeLists.txt
